--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -635,6 +635,12 @@ input, select, textarea {
 			font-family: 'Font Awesome 5 Brands';
 		}
 
+	.profile img{
+		border-radius: 50%;
+		width:150px;
+		height:150px;
+	}
+
 /* Image */
 
 	.image {
@@ -1140,9 +1146,12 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto, 256px 256px;
-			background-position: center, center;
-			background-repeat: no-repeat, repeat;
+			background-size: auto,
+ 256px 256px;
+			background-position: center,
+ center;
+			background-repeat: no-repeat,
+ repeat;
 			z-index: 2;
 		}
 
